fix: add old password validation
